<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_playlists" />

    <GridView
        android:id="@+id/playlist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:descendantFocusability="blocksDescendants"
        android:numColumns="2"
        android:orientation="vertical"/>

    <TextView
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_playlists" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/genres"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_padding">

        <TextView
            android:id="@+id/home_text_view"
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/primary_color"/>

        <TextView
            android:id="@+id/search_text_view"
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/primary_color"/>

        <TextView
            android:id="@+id/now_playing_text_view"
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/now_playing" />

    </LinearLayout>

</LinearLayout>