<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NowPlayingActivity">

    <TextView
        android:id="@+id/playlist_playing_text_view"
        style="@style/PlaylistStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/playing_hint"/>

    <ImageView
        android:id="@+id/playlist_playing_image_view"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:padding="@dimen/activity_padding"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_image_view"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:padding="@dimen/activity_padding"/>

        <ImageView
            android:id="@+id/play_image_view"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:padding="@dimen/activity_padding"/>

        <ImageView
            android:id="@+id/forward_image_view"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:padding="@dimen/activity_padding"/>

    </LinearLayout>

    <TextView
        android:id="@+id/song_playing_text_view"
        style="@style/PlaylistStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/author_playing_text_view"
        style="@style/SongsNumberStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_padding">

        <TextView
            style="@style/CategoryStyle"
            android:id="@+id/home_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/primary_color"/>

        <TextView
            android:id="@+id/search_text_view"
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/primary_color"/>

        <TextView
            android:id="@+id/now_playing_text_view"
            style="@style/CategoryStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/now_playing" />

    </LinearLayout>

</LinearLayout>